anneal/tests/fixtures/reject_safe_is_safe/expected.stderr
anneal::unsoundness

  × Unsoundness error: Annotations are only permitted on `unsafe` traits.
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ /// ```anneal
   · ──────┬──────
   ·       ╰── problematic block
 2 │ /// isSafe :
   ╰────

anneal::unsoundness

  × Unsoundness error: Annotations are only permitted on `unsafe` traits.
   ╭─[[PROJECT_ROOT]/src/lib.rs:7:1]
 6 │ 
 7 │ /// ```anneal
   · ──────┬──────
   ·       ╰── problematic block
 8 │ /// isSafe :
   ╰────

anneal::unsoundness

  × Unsoundness error: Annotations are only permitted on `unsafe` traits.
    ╭─[[PROJECT_ROOT]/src/lib.rs:15:1]
 14 │ 
 15 │ /// ```anneal
    · ──────┬──────
    ·       ╰── problematic block
 16 │ /// isSafe
    ╰────

Error: Validation failed: Naming collisions or missing proofs detected.
